# agentvm

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  spec.md
.github/workflows/: ci.yml
adapters/: package-lock.json  package.json  tsconfig.json
adapters/src/: anthropic-adapter.ts  base-adapter.ts  gemini-adapter.ts  index.ts  ollama-adapter.ts  openai-adapter.ts  openclaw-adapter.ts  types.ts
adapters/tests/: adapter-smoke.test.mjs
crates/agentvm-cli/: Cargo.toml
crates/agentvm-cli/src/: main.rs
crates/agentvm-cli/src/templates/: creative-writer.yaml  customer-support.yaml  data-analyst.yaml  researcher.yaml  senior-dev.yaml  turkish-dev.yaml
crates/agentvm-core/: Cargo.toml
crates/agentvm-core/src/: checksum.rs  diff.rs  error.rs  image.rs  lib.rs  memory.rs  merge.rs  validator.rs
crates/agentvm-memory/: Cargo.toml
crates/agentvm-memory/src/: consolidate.rs  export.rs  lib.rs  recall.rs  store.rs
examples/: minimal-agent.yaml  reviewer-agent.yaml
registry/: go.mod  main.go
registry/handlers/: handlers.go  handlers_test.go
registry/models/: models.go
registry/storage/: store.go  store_test.go
registry/web/: index.html  package-lock.json  package.json
registry/web/scripts/: studio-smoke.mjs
registry/web/src/: main.tsx  styles.css
scripts/: verify.sh
