[package]
name = "agentvm-core"
version = "0.1.0"
edition = "2021"
description = "Core library for AgentVM — image parsing, validation, diff, merge"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
